Made hanoi discs and pegs bigger and fixed gaps using relative positioning

--- a/Html5/styles/hanoi.css
+++ b/Html5/styles/hanoi.css
@@ -1,29 +1,31 @@
-﻿.instructions {
+.instructions {
     margin-bottom: 3rem;
 }
 
 .board {
-    width: 510px;
+    width: 600px;
     margin: 0 auto;
 }
 
 .peg, .base {
     background-color: cornflowerblue;
-    border: 2px solid brown;
+    border: 2px solid #2C7FA5;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
 
 .peg {
+    position: relative;
+    top: 6px;
     display: inline-block;
-    width: 15px;
+    width: 30px;
     height: 250px;
     margin: 0 75px;
 }
 
 .base {
     width: 100%;
-    height: 15px;
+    height: 30px;
     margin: 0;
 }
 
@@ -33,7 +35,7 @@
 }
 
 .disc {
-    height: 10px;
+    height: 20px;
     background-color: burlywood;
     border: 1px solid brown;
     border-radius: 2px;
